Optymalized css and fix not visible data in user panel

--- a/src/main/webapp/resources/css/offline.css
+++ b/src/main/webapp/resources/css/offline.css
@@ -1,3 +1,8 @@
+label{
+  color: #FFFFFF;
+  font-size: 16px;
+}
+
 body {
   padding-top: 40px;
   padding-bottom: 40px;
@@ -10,13 +15,24 @@ body {
   padding: 15px;
   margin: 0 auto;
 }
+
+.form-register {
+  max-width: 430px;
+  padding: 15px;
+  margin: 0 auto;
+}
+
 .form-signin .form-signin-heading,
-.form-signin .checkbox {
+.form-signin .checkbox,
+.form-register .form-register-heading,
+.form-register .checkbox{
   margin-bottom: 10px;
 }
 .form-signin .checkbox {
   font-weight: normal;
 }
+
+.form-register .form-control,
 .form-signin .form-control {
   position: relative;
   height: auto;
@@ -26,9 +42,12 @@ body {
   padding: 10px;
   font-size: 16px;
 }
+
+.form-register .form-control:focus,
 .form-signin .form-control:focus {
   z-index: 2;
 }
+
 .form-signin input[type="email"] {
   margin-bottom: -1px;
   border-bottom-right-radius: 0;
